--- a/index.html
+++ b/index.html
@@ -45,3 +45,4 @@ description: "「无人设备协作平台」"
     {% endif %}
 </ul>
 {% endif %}
+<button onclick="window.location.href = 'https://www.baidu.com/'">百度</button>
